--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tight Shorts</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link rel="stylesheet" href="../node_modules/bulma/css/bulma.min.css">
 </head>
 
 <body>
@@ -25,7 +25,6 @@
             </div>
         </div>
     </section>
-    <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
     <script src="./js/chart.js"></script>
 </body>
 
