Add chart legend

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tight Shorts</title>
     <link rel="stylesheet" href="../node_modules/bulma/css/bulma.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -20,12 +21,14 @@
         <div class="container">
             <div class="columns">
                 <div class="column">
-                    <div id="chart"></div>
+                    <div id="chart">
+                        <div id="legend" class="legend"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <script src="./js/chart.js"></script>
+    <script src="./js/chart.mjs"></script>
 </body>
 
 </html>
