Fetch and display data

--- a/web/index.html
+++ b/web/index.html
@@ -21,9 +21,20 @@
         <div class="container">
             <div class="columns">
                 <div class="column">
+
+                    <form class="field has-addons" id="search">
+                        <div class="control">
+                            <input class="input" id="input_ticker" type="text" placeholder="Find a Stock">
+                        </div>
+                        <div class="control">
+                            <button class="button is-info" id="submit_button" type="submit" name="Поиск">Search</button>
+                        </div>
+                    </form>
+
                     <div id="chart">
                         <div id="legend" class="legend"></div>
                     </div>
+
                 </div>
             </div>
         </div>
