Add second chart

--- a/web/main.html
+++ b/web/main.html
@@ -32,17 +32,25 @@
                         </div>
                     </form>
 
-                    <div id="chart">
-                        <div id="legend" class="legend"></div>
+                </div>
+            </div>
+            <div class="columns">
+                <div class="column is-half is-full-mobile">
+                    <div id="chartPercent">
+                        <div id="legendRatio" class="legend"></div>
                     </div>
-
+                </div>
+                <div class="column is-half is-full-mobile">
+                    <div id="chartVolume">
+                        <div id="legendVolume" class="legend"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    
+
     <!-- Octocat -->
-    <a href="https://github.com/samgozman/short-fork" target="_blank" rel="nofollow" rel="noreferrer">
+    <a href="https://github.com/samgozman/tightshorts" target="_blank" rel="nofollow" rel="noreferrer">
         <svg class="octocat" viewBox="0 0 250 250">
             <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
             <path class="octocat-arm"
