Titles + watermark fix

--- a/web/main.html
+++ b/web/main.html
@@ -72,11 +72,13 @@
             </div>
             <div class="columns">
                 <div class="column is-half is-full-mobile">
+                    <p class="title is-5 has-text-left">Short Volume Ratio</p>
                     <div id="chartPercent">
                         <div id="legendRatio" class="legend"></div>
                     </div>
                 </div>
                 <div class="column is-half is-full-mobile">
+                    <p class="title is-5 has-text-left">Short Volume</p>
                     <div id="chartVolume">
                         <div id="legendVolume" class="legend"></div>
                     </div>
