--- a/web/main.html
+++ b/web/main.html
@@ -143,7 +143,7 @@
                 <br>
                 <a href="https://accounts.binance.com/ru/register?ref=61635677" target="_blank" rel="nofollow">
                     Binance
-                </a> BTC:
+                </a> BTC (ERC20):
                 <br>
                 <img src="./img/btc_qr.png" alt="Bitcoin wallet" class="qrcode">
             </p>
