Add default stock on load

--- a/web/main.html
+++ b/web/main.html
@@ -223,6 +223,7 @@
     <script src="./js/navbar.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/chart.mjs"></script>
+    <script src="./js/onload.js"></script>
 </body>
 
 </html>
