Layout change + port:80

--- a/web/main.html
+++ b/web/main.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar container" role="navigation" aria-label="main navigation">
+    <nav class="navbar container is-max-widescreen" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
                 <img src="./img/logo_header.png" width="154" height="48">
@@ -127,7 +127,7 @@
     <!-- Error message: ends -->
 
     <section class="section">
-        <div class="container">
+        <div class="container is-max-widescreen">
             <h1 class="title is-3"> Tight Shorts <sup class="is-size-7">
                     <a href="https://github.com/samgozman/tightshorts/releases" target="_blank" rel="nofollow"
                         rel="noreferrer">
