--- a/web/main.html
+++ b/web/main.html
@@ -2,12 +2,21 @@
 <html lang="en">
 
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="description" content="US stocks short volume, short volume ratio, short exempt volume.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="csrf-token" content="{{ csrf }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tight Shorts | Daily Short Sale Volume</title>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#26a69a">
+    <link rel="shortcut icon" href="./img/favicon/favicon.ico">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Styles -->
     <link rel="stylesheet" href="../node_modules/bulma/css/bulma.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
