Add help button for mobile view

--- a/web/main.html
+++ b/web/main.html
@@ -28,7 +28,6 @@
             <a class="navbar-item" href="/">
                 <img src="./img/logo_header.png" width="154" height="48">
             </a>
-
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
@@ -43,6 +42,9 @@
                 </a>
                 <a class="navbar-item" href="https://short-fork.herokuapp.com/">
                     Short Fork
+                </a>
+                <a class="navbar-item modal-button is-hidden-tablet" data-target="help-modal">
+                    What is it all about?
                 </a>
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">
@@ -73,7 +75,7 @@
         </div>
         <div class="navbar-end">
             <div class="navbar-item">
-                <a class="button is-light modal-button" data-target="help-modal">
+                <a class="button is-light modal-button is-hidden-mobile" data-target="help-modal">
                     ?
                 </a>
                 <!-- Modal ? message -->
