--- a/web/main.html
+++ b/web/main.html
@@ -186,7 +186,23 @@
                     </div>
                 </div>
                 <div class="column is-half is-full-mobile">
-                    <p>Placeholder for table</p>
+                    <!-- Table -->
+                    <div class="table-container">
+                        <table class="table is-hoverable is-fullwidth">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th><abbr title="Short Volume">SV</abbr></th>
+                                    <th><abbr title="Short Exempt Volume">SEV</abbr></th>
+                                    <th><abbr title="Total volume">Vol</abbr></th>
+                                </tr>
+                            </thead>
+                            <tbody id="table-body">
+                                <!-- Table: elements -->
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- Table: ends -->
                 </div>
             </div>
             <p><strong>Disclaimer:</strong> The data on the chart is limited to the combined trading volume on the
