Generate CSV from table

--- a/web/main.html
+++ b/web/main.html
@@ -201,6 +201,7 @@
                                 <!-- Table: elements -->
                             </tbody>
                         </table>
+                        <p class="csv-download">Download full data: <a href="" id="csv-file">CSV file</a></p>
                     </div>
                     <!-- Table: ends -->
                 </div>
