Show left toolbar for tradingview

--- a/web/static/liveChart.html
+++ b/web/static/liveChart.html
@@ -33,6 +33,7 @@
                 "toolbar_bg": "#f1f3f6",
                 "enable_publishing": false,
                 "hide_top_toolbar": true,
+                "hide_side_toolbar": false,
                 "save_image": false,
                 "container_id": "tradingview_f1288"
             })
