Hide legend and change timezone

--- a/web/static/liveChart.html
+++ b/web/static/liveChart.html
@@ -26,7 +26,8 @@
                 "autosize": true,
                 "symbol": stock,
                 "interval": "D",
-                "timezone": "Etc/UTC",
+                "hide_legend": true,
+                "timezone": "America/New_York",
                 "theme": "light",
                 "style": "1",
                 "locale": "en",
