Add percentage columns in table and CSV

--- a/web/main.html
+++ b/web/main.html
@@ -231,7 +231,9 @@
                                 <tr>
                                     <th>Date</th>
                                     <th><abbr title="Short Volume">SV</abbr></th>
+                                    <th><abbr title="Short Volume Ratio">SV,%</abbr></th>
                                     <th><abbr title="Short Exempt Volume">SEV</abbr></th>
+                                    <th><abbr title="Short Exempt Volume Ratio">SEV,%</abbr></th>
                                     <th><abbr title="Total volume">Vol</abbr></th>
                                 </tr>
                             </thead>
