Multiple formats for CSV file (comma separated or semicolon)

--- a/web/main.html
+++ b/web/main.html
@@ -241,7 +241,10 @@
                                 <!-- Table: elements -->
                             </tbody>
                         </table>
-                        <p class="csv-download">Download full data: <a href="" id="csv-file">CSV file</a></p>
+                        <p class="csv-download">Download full data: <br>
+                            <a href="" id="csv-file-comma">CSV (comma separated)</a> or <a href=""
+                                id="csv-file-semicolon">CSV (semicolon separator)</a>
+                        </p>
                     </div>
                     <!-- Table: ends -->
                 </div>
