--- a/web/static/liveChart.html
+++ b/web/static/liveChart.html
@@ -26,7 +26,7 @@
                 "autosize": true,
                 "symbol": stock,
                 "interval": "D",
-                "hide_legend": true,
+                "hide_legend": false,
                 "timezone": "America/New_York",
                 "theme": "light",
                 "style": "1",
