Add description for calculation formulas

--- a/web/main.html
+++ b/web/main.html
@@ -128,17 +128,17 @@
                             <p>TightShorts.ru aggregates data from FINRA and presents it in an easy-to-use way.</p>
                             <h4>Terminology</h4>
                             <ol>
-                                <li> <strong>Volume</strong> - number of shares of all
+                                <li> <strong>Volume (Vol)</strong> - number of shares of all
                                     executed trades during regular trading hours</li>
-                                <li> <strong>Short Volume</strong> - number of shares that have been borrowed to open
+                                <li> <strong>Short Volume (SV)</strong> - number of shares that have been borrowed to open
                                     short positions</li>
-                                <li> <strong>Short Exempt Volume</strong> - number of shares of all executed
+                                <li> <strong>Short Exempt Volume (SEV)</strong> - number of shares of all executed
                                     short sale exempt trades during regular
                                     trading hours</li>
-                                <li> <strong>Short Volume Ratio</strong> - percentage of short positions from the total
-                                    volume</li>
-                                <li> <strong>Short Exempt Volume Ratio</strong> - percentage of short short sale exempt
-                                    trades from the total volume</li>
+                                <li> <strong>Short Volume Ratio (SV,%)</strong> - percentage of short positions from the total
+                                    volume. <i>Formula: SV / Vol * 100</i></li>
+                                <li> <strong>Short Exempt Volume Ratio (SEV,%)</strong> - percentage of short short sale exempt
+                                    trades from the total volume. <i>Formula: SEV / Vol * 100</i></li>
                             </ol>
                             <p><strong>Disclaimer:</strong> The data on the TightShorts is limited to the combined
                                 trading
@@ -243,7 +243,7 @@
                         </table>
                         <p class="csv-download">Download full data: <br>
                             <a href="" id="csv-file-comma">CSV (comma separated)</a> or <a href=""
-                                id="csv-file-semicolon">CSV (semicolon separator)</a>
+                                id="csv-file-semicolon">CSV (semicolon separated)</a>
                         </p>
                     </div>
                     <!-- Table: ends -->
